--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Página para ver noticias según el país y la categoría">
+    <meta name="keywords" content="React, programación, noticias, JavaScript">
+    <meta name="author" content="Santamarina Andrés">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Práctico de React - Punto 12</title>
   </head>
   <body>
     <div id="root"></div>
